# forja

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TASKS.md  components.json  electron-builder.yml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.flatpak/: dev.forja.terminal.metainfo.xml  dev.forja.terminal.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/icons/: icon.icns
backend/src/: config.rs  file_reader.rs  file_tree.rs  git_info.rs  lib.rs  main.rs  metrics.rs  pty.rs  watcher.rs
docs/: .counters.json  BRIEF.md  DESIGN-GUIDELINES.md  LANDING-PAGE-SPEC.md  MVP-SCOPE.md  PRD.md  electron-performance-optimization.md  generated-page.html
electron/: agent-chat-ipc.ts  agent-chat.ts  app-metrics.ts  buffer-persistence.ts  cli-detector.ts  config.ts  editor-detector.ts  file-cache.ts  file-operations.ts  file-reader.ts  file-tree.ts  file-watcher.ts  file-writer.ts  git-info.ts  ime-config.ts  lite-mode.ts  main.ts  metrics.ts  path-validation.ts  paths.ts  preload.cts  project-config.ts  project-icon.ts  pty-notifications.ts  pty.ts  ring-buffer.ts  tsconfig.json  ui-save-gate.ts  user-settings.ts  watcher.ts  webview-keyboard-bridge.ts  window-opacity.ts
frontend/: App.tsx  main.tsx
scripts/: build-install.sh  bump-version.sh
site/: .firebaserc  firebase.json
tests/: setup.ts
(+425 files in other folders)
