[package]
name = "forja"
version = "0.1.0"
description = "A dedicated desktop client for Claude Code"
authors = ["Fernando Moreira"]
edition = "2021"

[lib]
name = "forja_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
walkdir = "2.5"
portable-pty = "0.9"

[dev-dependencies]
tempfile = "3.12"
